fix(components): fix SwirlConsoleLayout sidebar z-index

--- a/packages/swirl-components/src/components/swirl-console-layout/swirl-console-layout.css
+++ b/packages/swirl-components/src/components/swirl-console-layout/swirl-console-layout.css
@@ -34,7 +34,7 @@
 
 .console-layout__sidebar {
   position: fixed;
-  z-index: 1;
+  z-index: var(--s-z-30);
   top: 4rem;
   bottom: 0;
   left: 0;
